test/fail/inheritance/inherit_self.lly
#[
SyntaxError: A class cannot inherit from itself!
    from inherit_self.lly:6
]#

class abc < abc {  }
